Spacing hack. Styles for h/w and padding/margins need fixed everywhere.

--- a/public/style.css
+++ b/public/style.css
@@ -63,7 +63,7 @@ BUTTON {
 .tweets {
   display: inline-block;
   position: relative;
-  height: 100%;
+  height: calc(100% - 6px);
   overflow: scroll;
   overflow-x: hidden;
   width: 375px;
